# rendezllama

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/: renovate.json5
.github/workflows/: test_cmake.yaml
dep/: CMakeLists.txt
dep/cmake_fetchcontent/: fildesh.cmake  llama_cpp.cmake
dep/cmake_module/: FindOpenBLAS.cmake
doc/setting/: model.md  penalty.md  prompt.md  sample.md  stdio.md
example/: CMakeLists.txt
example/bot/twitch/: README.md  bot.py  bot_main.py  priming.txt  setting.sxproto
example/bot/twitch_sentiment/: bot.py
example/prompt/: CMakeLists.txt  README.md
example/prompt/assistant_alpaca/: README.md  answer.txt  priming.txt  rolling.txt  setting.sxpb  setting.sxproto
example/prompt/assistant_chatml/: README.md  priming.txt  rolling.txt  setting.sxpb
example/prompt/assistant_coprocess/: README.md  priming.txt  setting.sxpb  setting.sxproto
example/prompt/assistant_miku/: README.md  priming.txt  rolling.txt  setting.sxpb  setting.sxproto
example/prompt/assistant_orca/: README.md  priming.txt  rolling.txt  setting.sxpb  setting.sxproto
example/prompt/assistant_plain/: README.md  setting.sxpb
example/prompt/assistant_vicuna/: README.md  priming.txt  rolling.txt  setting.sxpb  setting.sxproto
example/prompt/confidant_alpaca/: README.md  priming.txt  rolling.txt  setting.sxpb  setting.sxproto
example/prompt/miku_0/: README.md  priming.txt  rolling.txt
example/prompt/roshambo_0/: README.md  priming.txt  rolling.txt  setting.sxproto
example/prompt/roshambo_kira/: README.md  priming.txt  rolling.txt  setting.sxpb  setting.sxproto
pkg/cmake/: version.ini
pkg/cmake/externalproject/: fildesh_project.cmake
pkg/cmake/fetchcontent/: llama_cpp.cmake
src/: CMakeLists.txt
src/chat/: CMakeLists.txt  chat.cc  chat.hh  chat_main.cc  cmd.cc  cmd.hh  display.cc  display.hh  guide.cc  guide.hh  opt.cc  opt.hh  opt_schema.cc  opt_schema.hh  sampling_schema.hh  trajectory.cc  trajectory.hh
src/language/: inference.cc  inference.hh  vocabulary.cc  vocabulary.hh
src/localserv/: CMakeLists.txt  localserv_main.cc
src/tokenize/: CMakeLists.txt  tokenize.cc  tokenize.hh  tokenize_main.cc
test/: CMakeLists.txt
test/chat/: CMakeLists.txt  guide_test.cc  opt_test.cc  trajectory_test.cc
test/example/prompt/: CMakeLists.txt  parse_test.cc
test/language/: CMakeLists.txt  vocabulary_test.cc
test/manual/: chat.fildesh  chat.sh  coverage.md  openblas.md
test/prompt/miku_0/: priming.txt
test/prompt/roshambo_0/: priming.txt  rolling.txt
test/src/: CMakeLists.txt  opt_test.cc  size_test.cc
